--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body {
     box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -1px rgba(0, 0, 0, 0.06); 
     border-radius: 8px; 
     right: 32px;
+    cursor:pointer;
 }
 .hideContainer {
     display: none;
