--- a/style.css
+++ b/style.css
@@ -31,12 +31,12 @@ body {
     background-size: cover;
 }
 .convivaButton {
-    background-color: #FFFFFF; 
-    border-radius: 3px; 
+    background-color: #FFFFFF;
+    border-radius: 3px;
     border: 1px solid #9cdc00;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 5px;
-    margin: 2px; 0px;
+    margin: 5px 2.5px;
     cursor: pointer;
 }
 .convivaButtonInputContainer{
