--- a/style.css
+++ b/style.css
@@ -20,18 +20,17 @@ body {
     border: 0px; 
     background-color: #6da927;
     float: right;
-    padding-top: 5px;
     color: #FFFFFF;
 }
 .convivaWelcomeBanner {
     background-image: url('./assets/convivaBackground.png');
     background-repeat: no-repeat;
-    height: 140px;
-    padding: 20px;
+    height: 135px;
+    padding: 5px 20px;
     background-size: cover;
 }
 .convivaButton {
-    background-color: #FFFFFF;
+   background-color: #FFFFFF;
     border-radius: 3px;
     border: 1px solid #9cdc00;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -40,7 +39,8 @@ body {
     cursor: pointer;
 }
 .convivaButtonInputContainer{
-    padding: 20px;
+   padding: 20px;
+    height: 150px;
 }
 .convivaButtonContainer {
     text-align: right;
@@ -85,7 +85,12 @@ body {
     align-items: center;
     padding: 0 20px;
 }
-
+.convivaChatDisclaimer p{
+    
+    color: black;
+    font-size: 11px;
+    padding: 5px 20px;
+}
 .convivaSearch:focus {
   border-color: #007bff;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
